Actualizacion de Directorio y API'Post

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT = 3001
-MONGO_URL = mongodb+srv://KendallLawrent:KendallLawrent2005@cluster0.rwfau.mongodb.net/cluster0?retryWrites=true&w=majority
+MONGO_URI = mongodb+srv://KendallLawrent:KendallLawrent2005@cluster0.rwfau.mongodb.net/cluster0?retryWrites=true&w=majority
