--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -7,8 +7,7 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-./backend/node_modules
-./frontend/node_modules
+node_modules
 dist
 dist-ssr
 *.local
@@ -23,3 +22,6 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# delete the node modules from the backend folder
+../backend/node_modules
