--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,27 @@
-./backend/node_modules
-./frontend/node_modules
+/backend/node_modules
+/frontend/node_modules
 .vscode
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
