--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "5.0.1",
+    "cloudinary": "^1.30.0",
     "cors": "2.8.5",
     "dotenv": "16.0.1",
     "express": "4.18.1",
+    "express-fileupload": "^1.4.0",
+    "fs-extra": "^10.1.0",
     "jsonwebtoken": "8.5.1",
     "mongoose": "6.3.4",
     "nodemon": "2.0.19"
